welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: not found: value i
  setCouleurBrosse(T((-1+i+d.toInt)%w));
                         ^